:lipstick: fix scroll only top layer when cover the bottom layer, ref from https://stackoverflow.com/questions/15416919/how-to-scroll-only-top-layer-to-cover-over-bottom-layer-in-browser

--- a/frontend/src/styles/pages/_PetList.scss
+++ b/frontend/src/styles/pages/_PetList.scss
@@ -70,6 +70,7 @@
       align-items: center;
       font-size: 16px;
       margin: 20px auto 20px auto;
+      overflow: hidden;
 
       @include tablet {
         margin: 30px auto 30px auto;
